fix(shared): improve status bar display on small viewports

--- a/ui/src/scss/_patterns_status-bar.scss
+++ b/ui/src/scss/_patterns_status-bar.scss
@@ -8,4 +8,20 @@
     right: 0;
     z-index: 1;
   }
+
+  .p-status-bar__row {
+    @extend %fixed-width-container;
+    column-gap: $sph--small;
+    flex-direction: column;
+
+    @media only screen and (min-width: $breakpoint-large) {
+      flex-direction: row;
+    }
+  }
+
+  .p-status-bar__secondary {
+    @media only screen and (min-width: $breakpoint-large) {
+      justify-content: flex-end;
+    }
+  }
 }
